[gd_scene load_steps=21 format=2]

[ext_resource path="res://menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://menu/aaaa.wav" type="AudioStream" id=2]
[ext_resource path="res://menu/_fondV1.jpg" type="Texture" id=3]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/button.png" type="Texture" id=5]
[ext_resource path="res://ui/button_click.png" type="Texture" id=6]
[ext_resource path="res://ui/button_survol.png" type="Texture" id=7]
[ext_resource path="res://ui/SovietProgram-BoldItalic.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://menu/titre.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/SovietProgram-Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://menu/Xolonium-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://ui/ship-selection/ShipSelection.tscn" type="PackedScene" id=12]
[ext_resource path="res://tutorial/Tutorial.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=4]
resource_name = "Play"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 71, 1099 ), Vector2( 80, 550 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=11]
resource_name = "Credits"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1500 ), Vector2( 0, 700 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -700, 118.42 ), Vector2( 55.4577, 121.511 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 11 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.361328
margin_bottom = -0.361328
script = ExtResource( 1 )

[node name="Bruit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Fond" type="TextureRect" parent="."]
margin_right = 614.0
margin_bottom = 2718.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 296.804, 400.361 )

[node name="Play" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -530.0
margin_right = 231.0
margin_bottom = -415.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Play"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -227.0
margin_top = -111.949
margin_right = 227.0
margin_bottom = 2.05054
custom_fonts/font = SubResource( 1 )
text = "PLAY"
align = 1
valign = 1
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Play"]
autoplay = "Play"
playback_speed = 2.0
anims/Play = SubResource( 4 )

[node name="Control" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -380.0

[node name="HowTo" type="TextureButton" parent="Control"]
editor/display_folded = true
margin_right = 610.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Control/HowTo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -227.0
margin_top = -112.0
margin_right = 213.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 10 )
text = "HOW TO PLAY"
align = 1
valign = 1

[node name="Credits" type="TextureButton" parent="Control"]
editor/display_folded = true
margin_top = 104.0
margin_right = 610.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="Control/Credits"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -111.0
margin_right = 221.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 1 )
text = "CREDITS"
align = 1
valign = 1

[node name="Quit" type="TextureButton" parent="Control"]
editor/display_folded = true
margin_top = 208.0
margin_right = 610.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="Control/Quit"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -111.0
margin_right = 221.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 1 )
text = "QUIT"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
autoplay = "Credits"
playback_speed = 2.0
anims/Credits = SubResource( 11 )

[node name="Titre2" type="TextureRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -249.542
margin_top = 121.511
margin_right = 350.458
margin_bottom = 274.511
mouse_filter = 2
texture = ExtResource( 9 )

[node name="Titre" type="AnimationPlayer" parent="Titre2"]
autoplay = "Titre"
anims/Titre = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Popup2" type="Popup" parent="CanvasLayer"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.361328
margin_bottom = -0.361328
popup_exclusive = true

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Popup2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.09082
margin_bottom = -3.09082
color = Color( 0.0470588, 0.105882, 0.25098, 1 )

[node name="Croix" type="Button" parent="CanvasLayer/Popup2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -97.0
margin_top = 18.0
margin_right = -15.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 6 )
text = "X"

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/Popup2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -375.0
margin_right = 275.0
margin_bottom = 374.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.941176, 0.909804, 0.439216, 1 )
bbcode_enabled = true
bbcode_text = "[center]
Space Express

An open source game made for  Open Jam 2019

Coding
Clément \"Topy\" Orlandini
Antoine \"Foxy\" Couapel

Art
Emilia \"Lyrola\" Briault
Ludovic \"BroZ\" Warin

Music
Tristan Clément
[/center]
"
tab_size = 24
text = "
Space Express

An open source game made for  Open Jam 2019

Coding
Clément \"Topy\" Orlandini
Antoine \"Foxy\" Couapel

Art
Emilia \"Lyrola\" Briault
Ludovic \"BroZ\" Warin

Music
Tristan Clément

"

[node name="ShipPopup" type="Popup" parent="CanvasLayer"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ShipPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0.129412, 1 )

[node name="ShipSelection" parent="CanvasLayer/ShipPopup" instance=ExtResource( 12 )]

[node name="Tutorial" parent="CanvasLayer" instance=ExtResource( 13 )]
visible = false
popup_exclusive = true
[connection signal="mouse_entered" from="Play" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Control/HowTo" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Control/HowTo" to="." method="_on_HowTo_pressed"]
[connection signal="mouse_entered" from="Control/Credits" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Control/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="Control/Quit" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="Titre2/Titre" to="." method="_on_Titre_animation_finished"]
[connection signal="pressed" from="CanvasLayer/Popup2/Croix" to="." method="_on_Croix_pressed"]
[connection signal="popup_hidden" from="CanvasLayer/ShipPopup/ShipSelection" to="." method="_on_ShipSelection_popup_hidden"]
